[package]
name = "clam_ffi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "clam_ffi"
crate-type = ["cdylib"]


[dependencies]
abd-clam = { path = "../clam/crates/abd-clam" }
csv = "1.3.0"
distances = {path = "../clam/crates/distances"}
float-cmp = "0.9.0"
glam = "0.24.0"
hex = "0.4.3"
#interoptopus = "0.14.18"
#interoptopus_backend_c = "0.14.18"
#interoptopus_backend_csharp = "0.14.18"
nalgebra = "0.32.2"
ndarray = "0.15.6"
ndarray-npy = "0.8.1"
rand = "0.8.5"
rmp-serde = "1.1.1"
serde = "1.0.164"
